 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2014 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2014 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2014-12-04
r1571 introduce bvx in FILEIO
- output vbx file

--------------------------
2014-11-29
r1570 ducky isothermal flow
 - calculate component's bbox

r1569 ducky
 - bug fix : calulate the number of OBSTACLE in setBCIndexBase()

--------------------------
2014-11-23
r1568 Introduce boundary conditions for Central scheme
 - pvec_ibc_specv_fdm_(), vobc_pv_specv_fdm_()
 - guide=2 is required for all cases owing to the implementation of traction free BC
 - vobc_tfree_cc_(), vobc_tfree_cf_()
 - Introduce Geometry class
 - move findIDfromLabel() from Control to FBUtility
 - move variables related fill function from Control to Geometry
 - move fill functions from VoxInfo to Geometry

--------------------------
2014-11-17
r1567 remove unrecognized charcters in History.C

--------------------------
2014-11-16
r1566 output summary for averaged force of components
 - split rms and rmsmean to rmsV, rmsmeanV, rmsP, rmsmeanP, rmsT, rmsmeanT
 - change trigger of statistic from LES.calc to Mode.StatVelocity
 - check the number of cylinders in IP_Cylinder
 - write a separate force file for each obstacle

--------------------------
2014-11-14
r1565 arrangement ffv_blas.f90

--------------------------
2014-11-13
r1564 bug fix : restart statistic and cast pointer to fortran subroutine
 - Control::getTimeControl()
 - modify cast to fortran subroutine in ffv_Loop.C
 - add InnerIteration of BiCGstab

--------------------------
2014-11-09
r1563 improve calcForce()

r1562 improve PBiCGstab
 - suppress initialization of arrays in PBiCGstab

r1651 modify for PMlib-3.0.0
 - improve PBiCGstab algorithm