@@ -211,7 +211,7 @@ FFVC_FC = mpif90
 FFVC_FC_LD = 
 FFVC_LDFLAGS = 
 FFVC_LIBS =  -lstdc++ -lifcore
-FFVC_REVISION = 20141204_1300
+FFVC_REVISION = 20141205_0900
 FREALOPT = 
 GREP = /usr/bin/grep
 INSTALL = /usr/local/bin/ginstall -c
@@ -235,10 +235,10 @@ OBJEXT = o
 PACKAGE = FFVC
 PACKAGE_BUGREPORT = keno@riken.jp
 PACKAGE_NAME = FFVC
-PACKAGE_STRING = FFVC 2.0.1
+PACKAGE_STRING = FFVC 2.0.2
 PACKAGE_TARNAME = FFVC
 PACKAGE_URL = 
-PACKAGE_VERSION = 2.0.1
+PACKAGE_VERSION = 2.0.2
 PATH_SEPARATOR = :
 PL_CFLAGS = -I/usr/local/FFV/Polylib/include -I/usr/local/FFV/Polylib/include/common
 PL_DIR = /usr/local/FFV/Polylib
@@ -254,11 +254,11 @@ STRIP =
 TP_CFLAGS = -I/usr/local/FFV/TextParser/include
 TP_DIR = /usr/local/FFV/TextParser
 TP_LDFLAGS = -L/usr/local/FFV/TextParser/lib -lTPmpi
-VERSION = 2.0.1
-abs_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.0/doc
-abs_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.0/doc
-abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.0
-abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.0
+VERSION = 2.0.2
+abs_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.1/doc
+abs_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.1/doc
+abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.1
+abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.1
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = gfortran
@@ -280,7 +280,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.0/install-sh
+install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.1/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
