@@ -20,8 +20,8 @@
 #ifndef _FFVC_VERSION_H_
 #define _FFVC_VERSION_H_
 
-#define FFVC_VERSION_NO  "2.0.1"
-#define FFVC_REVISION    "20141204_1300"
+#define FFVC_VERSION_NO  "2.0.2"
+#define FFVC_REVISION    "20141205_0900"
 
 #endif /* _FFVC_VERSION_H_ */
 
